# wave

./: AGENTS.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml  release.yml
.wave/: test.yml  test_post.yaml
src/: collection.rs  error.rs  http_client.rs  lib.rs  printer.rs
src/http/: backend.rs  client.rs  error.rs  mod.rs  request.rs  response.rs  utils.rs
