[package]
name = "wave"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.11"
async-trait = "0.1.88"
clap = { version = "4.5.42", features = ["derive"] }
colored_json = "5"
reqwest = "0.12.22"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4.4"
urlencoding = "2.1.3"
indicatif = "0.17"
serde_yaml = "0.9.34"
serde = { version = "1.0.219", features = ["derive"] }
